# cpm

./: .gitignore  .pages  404.html  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSES-BUNDLE  Makefile  NOTES-LD.md  README.md  README.rst  index.html  index.md  mine.pkl  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  showcase.html  showcase.ipynb  sitemap.xml  style.css  test.py  tox.ini
about/: about.md  index.html
api/applications/: index.html
api/datasets/: index.html
api/generators/: index.html
api/hierarchical/: index.html
api/models/: index.html
api/optimisation/: index.html
api/utils/: index.html
contributing/: contributing.md  index.html
cpm/: __init__.py  __priors__.py
cpm/applications/: DeltaNetwork.py  __init__.py  (+8 more)
docs/: .pages  about.md  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  requirements.txt  roadmap.md  troubleshooting.md  usage.rst
examples/: .pages  SpaceObserver_summary_merged.csv  bandit.csv  bandit.py  bandit_optimised.csv  bandit_simulation.csv  bandit_small.csv
installation/: index.html
references/: .pages
roadmap/: index.html  roadmap.md
search/: search_index.json
test/: test_compact.py
tmp/: bandit.csv  benchmark.py  cpm-walkthrough.html  cpm-walkthrough.ipynb  metad-test.py  modelling.py  parallel_test.ipynb  parallel_test.py  scav_curated_data_debug.pkl  showcase.ipynb  simulated_data.csv  test.ipynb  test.pkl  test.py  test_compact.py  test_pybads.py  vbmc.py
troubleshooting/: index.html
tutorials/: .pages
(+213 files in other folders)
